--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -6,7 +6,8 @@
     <title>esveo Agar</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <canvas id="game" width="800" height="600"></canvas>
+    <div id="ui"></div>
 
     <script type="module" src="./src/main.ts"></script>
   </body>
