--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>esveo Agar</title>
   </head>
-  <body>
+  <body style="margin: 0px">
     <canvas id="game" width="800" height="600"></canvas>
     <div id="ui"></div>
 
