--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -1,13 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="margin: 0; padding: 0; overflow: hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>esveo Agar</title>
   </head>
-  <body>
-    <h1>Hello World!</h1>
-
+  <body style="margin: 0; padding: 0">
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
